[package]
name = "webgl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "^0.1.2"
wasm-bindgen = "^0.2.0"
console_error_panic_hook = { version = "^0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "^0.3.0"

[dependencies.web-sys]
version = "^0.3.0"
features = ["console"]
