[package]
name = "webgl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "^0.3.61"
wasm-bindgen = "^0.2.0"
console_error_panic_hook = { version = "^0.1.1", optional = true }

[dependencies.web-sys]
version = "^0.3.4"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "Window",
]
